tests/parser-test-files/bad-files/parse-while-let.1.error
error: Malformed while-let expression
  --> test:4:20
   |
 4 |  (define f (while-let))
   |                      ^ expected pattern
